[gd_scene load_steps=20 format=3 uid="uid://7vlhtarjc6k"]

[ext_resource type="Script" path="res://4 - main_manu/main_menu.gd" id="1_6d4fq"]
[ext_resource type="Texture2D" uid="uid://cjun3b8d01den" path="res://assets/MainMenu/menu_bg.png" id="2_dp0bl"]
[ext_resource type="Shader" path="res://Shaders/Wave.gdshader" id="3_60wls"]
[ext_resource type="Texture2D" uid="uid://c6ld3yu32s4jl" path="res://assets/MainMenu/menu_exit.png" id="4_rwhay"]
[ext_resource type="Texture2D" uid="uid://dw5ccrgcp1h6s" path="res://assets/MainMenu/menu_settings.png" id="5_7xofe"]
[ext_resource type="Texture2D" uid="uid://day3pc601wild" path="res://assets/MainMenu/menu_play.png" id="6_q0amu"]
[ext_resource type="Texture2D" uid="uid://6ninq3rnbssp" path="res://assets/MainMenu/menu_i.png" id="7_qh8hl"]
[ext_resource type="Texture2D" uid="uid://cvu51ug6sbc8q" path="res://assets/MainMenu/menu_title.png" id="7_wx5cg"]
[ext_resource type="VideoStream" path="res://assets/Tutorial/mv.ogv" id="9_g2x3s"]
[ext_resource type="PackedScene" uid="uid://doro1aad8i0ch" path="res://2 - System/Setting/setting_window.tscn" id="10_4qq7t"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tkl8b"]
texture = ExtResource("2_dp0bl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7b260"]
shader = ExtResource("3_60wls")
shader_parameter/do_abs = null
shader_parameter/do_quantize = null
shader_parameter/quantize_to = 1.0
shader_parameter/sine_amplitude = Vector2(1, 0)
shader_parameter/sine_speed = Vector2(1, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yvnxa"]
texture = ExtResource("4_rwhay")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3njy0"]
shader = ExtResource("3_60wls")
shader_parameter/do_abs = null
shader_parameter/do_quantize = null
shader_parameter/quantize_to = 1.0
shader_parameter/sine_amplitude = Vector2(1, 0)
shader_parameter/sine_speed = Vector2(1, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wsbxk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ql4qt"]
texture = ExtResource("5_7xofe")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b2pao"]
shader = ExtResource("3_60wls")
shader_parameter/do_abs = null
shader_parameter/do_quantize = null
shader_parameter/quantize_to = 1.0
shader_parameter/sine_amplitude = Vector2(1, 0)
shader_parameter/sine_speed = Vector2(1, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eqboh"]
texture = ExtResource("6_q0amu")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tp202"]
shader = ExtResource("3_60wls")
shader_parameter/do_abs = null
shader_parameter/do_quantize = null
shader_parameter/quantize_to = 1.0
shader_parameter/sine_amplitude = Vector2(1, 0)
shader_parameter/sine_speed = Vector2(1, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6d4fq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_tkl8b")

[node name="QuitBtn" type="Button" parent="Panel"]
material = SubResource("ShaderMaterial_7b260")
layout_mode = 0
offset_left = 792.0
offset_top = 936.0
offset_right = 1112.0
offset_bottom = 1112.0
theme_override_styles/focus = SubResource("StyleBoxTexture_yvnxa")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_yvnxa")
theme_override_styles/disabled = SubResource("StyleBoxTexture_yvnxa")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_yvnxa")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_yvnxa")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_yvnxa")
theme_override_styles/hover = SubResource("StyleBoxTexture_yvnxa")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_yvnxa")
theme_override_styles/pressed = SubResource("StyleBoxTexture_yvnxa")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_yvnxa")
theme_override_styles/normal = SubResource("StyleBoxTexture_yvnxa")

[node name="SettingBtn" type="Button" parent="Panel"]
material = SubResource("ShaderMaterial_3njy0")
layout_mode = 0
offset_left = 808.0
offset_top = 776.0
offset_right = 1128.0
offset_bottom = 952.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_wsbxk")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_ql4qt")
theme_override_styles/disabled = SubResource("StyleBoxTexture_ql4qt")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_ql4qt")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_ql4qt")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_ql4qt")
theme_override_styles/hover = SubResource("StyleBoxTexture_ql4qt")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_ql4qt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ql4qt")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_ql4qt")
theme_override_styles/normal = SubResource("StyleBoxTexture_ql4qt")

[node name="PlayBtn" type="Button" parent="Panel"]
material = SubResource("ShaderMaterial_b2pao")
layout_mode = 0
offset_left = 776.0
offset_top = 608.0
offset_right = 1096.0
offset_bottom = 784.0
theme_override_styles/focus = SubResource("StyleBoxTexture_eqboh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_eqboh")
theme_override_styles/disabled = SubResource("StyleBoxTexture_eqboh")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_eqboh")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_eqboh")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_eqboh")
theme_override_styles/hover = SubResource("StyleBoxTexture_eqboh")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_eqboh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_eqboh")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_eqboh")
theme_override_styles/normal = SubResource("StyleBoxTexture_eqboh")

[node name="TextureButton" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -248.0
offset_right = -96.0
offset_bottom = -120.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("7_qh8hl")
texture_pressed = ExtResource("7_qh8hl")
texture_hover = ExtResource("7_qh8hl")
texture_disabled = ExtResource("7_qh8hl")
texture_focused = ExtResource("7_qh8hl")

[node name="MenuTitle" type="Sprite2D" parent="Panel"]
material = SubResource("ShaderMaterial_tp202")
position = Vector2(624, 1144)
texture = ExtResource("7_wx5cg")

[node name="SettingWindow" parent="." instance=ExtResource("10_4qq7t")]
visible = false
layout_mode = 1
anchor_top = 0.211111
anchor_right = 0.74375
anchor_bottom = 0.561111
grow_horizontal = 1
grow_vertical = 1

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("9_g2x3s")
expand = true

[connection signal="pressed" from="Panel/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="Panel/SettingBtn" to="." method="_on_setting_btn_pressed"]
[connection signal="pressed" from="Panel/PlayBtn" to="." method="_on_play_btn_pressed"]
